# libqfieldsync

./: .flake8  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  __init__.py  layer.py  offline_converter.py  project.py  project_checker.py  pyproject.toml
.docker/: Dockerfile  xvfb-pytest
.github/workflows/: continuous_integration.yml
libqfieldsync/: __init__.py  layer.py  offline_converter.py  offline_editing_mini.py  offliners.py  project.py  project_checker.py
libqfieldsync/utils/: bad_layer_handler.py  config_utils.py  exceptions.py  file_utils.py  logger.py  qgis.py  xml.py
tests/: test_config_utils.py  test_file_utils.py  test_layer.py  test_offline_converter.py  test_offline_converter_minioffliner.py  test_offline_converter_qgiscore.py
tests/data/assets_project/: curved_polys.gpkg  project.qgs  project.qgs~
tests/data/geometryless_project/: geometryless.ods  geometryless.xlsx  project.qgs
tests/data/localized_project/: geometryless.csv  project.qgs
tests/data/pk_project/: project.qgs
tests/data/simple_project/: project.qgs
utils/: bad_layer_handler.py  exceptions.py  file_utils.py  logger.py  qgis.py  xml.py
